plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.14'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'com.dnd'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '11'
}

ext {
	set('springCloudVersion', "2021.0.4")
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.h2database:h2'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.springframework.boot:spring-boot-starter-security'

	runtimeOnly 'com.mysql:mysql-connector-j'

	// swagger Docs
	implementation 'io.springfox:springfox-boot-starter:3.0.0'
	implementation "io.springfox:springfox-swagger-ui:3.0.0"

	//UUID
	implementation 'com.github.f4b6a3:uuid-creator:5.3.2'

	//jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'

	// redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	//properties 프로세서
	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"

	//OpenFeign
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'

	// redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	//S3
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.1.RELEASE'
	implementation 'com.amazonaws:aws-java-sdk-s3'
}

tasks.named('test') {
	useJUnitPlatform()
}
